k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kcet-predictor

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kcet-predictor

  template:
    metadata:
      labels:
        app: kcet-predictor

    spec:
      containers:
        - name: kcet-predictor
          image: kcet-predictor:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
