k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kcet-predictor-service

spec:
  selector:
    app: kcet-predictor

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: NodePort
